--- a/angular.json
+++ b/angular.json
@@ -27,13 +27,19 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "node_modules/@chrisjmora/markenx-dxp-assets/assets",
+                "output": "assets/"
+              }
             ],
             "styles": [
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@chrisjmora/markenx-dxp-assets/scss/index.scss",
               "src/styles.scss"
             ],
             "scripts": [
