--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "udla-markenx-dxp-student-ui",
-  "version": "0.0.0",
+  "name": "@chrisjmora/markenx-dxp-student-ui",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@chrisjmora/markenx-dxp-assets": "^1.1.2",
+    "@chrisjmora/markenx-dxp-components": "^1.0.1",
     "bootstrap": "^5.3.2",
     "primeicons": "^7.0.0",
     "primeng": "^15.4.1",
